Added a link to a mirror which could be directly loaded in a browser to the slides.

--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -9,6 +9,9 @@
 <meta name="author" content="Arnoud Visser">
 <meta name="author" content="Sebastian Castro">
 
+<meta name="mirror" content="A copy of the slides that can directly opened in a browser are available at:">
+<meta name="url" content="https://staff.fnwi.uva.nl/a.visser/activities/MachineLearningForRescue/slides/">
+
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="viewport"
@@ -801,7 +804,7 @@
         </section>
 
         <section>
-          <h2>Clustering for Agent Simulation</h2>
+          <h2>Clustering for <br> Agent Simulation</h2>
 
           <ul>
             <li>Teams use clustering during precomputation mostly for
@@ -1196,6 +1199,12 @@
 
           <img src="images/classification_learner.png" />
         </section>
+
+        <!--section>
+          <h2>Regression Learner</h2>
+
+          <img src="images/regression.jpg" width=900 />
+        </section-->
 
         <section>
           <h2>Classification Learner</h2>
