--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -15,7 +15,7 @@
   content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <link rel="stylesheet" href="reveal/css/reveal.min.css" />
-<link rel="stylesheet" href="reveal/css/theme/night.css" id="theme" />
+<link rel="stylesheet" href="reveal/css/theme/simple.css" id="theme" />
 <link rel="stylesheet" href="reveal/lib/css/zenburn.css" />
 <script>
 	document.write('<link rel="stylesheet" href="reveal/css/print/'
@@ -1320,7 +1320,6 @@
       <section>
         <section>
           <h2>Conclusions</h2>
-
 
           In this workshop we have demonstrated<br>the use of several AI
           and ML techniques:
